--- a/application-code/container-queue-proc/templates/buildspec.yml
+++ b/application-code/container-queue-proc/templates/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       - $REPOSITORY = $env:REPO_URL -replace "/[^/]*$", ""
-      - aws ecr get-login-password --region $AWS_REGION | powershell -Command "docker login --username AWS --password-stdin $REPOSITORY"
+      - aws ecr get-login-password | powershell -Command "docker login --username AWS --password-stdin $REPOSITORY"
       - powershell -Command "(Get-Content -path ./application-code/container-queue-proc/src/app.py) -replace '<QUEUE_NAME>', '$QUEUE_NAME' | Set-Content -Path ./application-code/container-queue-proc/src/app.py"
       - powershell -Command "(Get-Content -path ./application-code/container-queue-proc/src/app.py) -replace '<DESTINATION_BUCKET>', '$DESTINATION_BUCKET' | Set-Content -Path ./application-code/container-queue-proc/src/app.py"
       - $COMMIT_HASH = $env:CODEBUILD_RESOLVED_SOURCE_VERSION.substring(0, 7)
