--- a/application-code/container-queue-proc/templates/buildspec.yml
+++ b/application-code/container-queue-proc/templates/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - Install-Module -Name DockerMsftProvider -Repository PSGallery -Force
       - Install-Package -Name docker -ProviderName DockerMsftProvider -Force
       - $REPOSITORY = $env:REPO_URL -replace "/[^/]*$", ""
       - aws ecr get-login-password | powershell -Command "docker login --username AWS --password-stdin $REPOSITORY"
