--- a/application-code/container-queue-proc/templates/buildspec.yml
+++ b/application-code/container-queue-proc/templates/buildspec.yml
@@ -3,7 +3,8 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - Install-Module -Name DockerMsftProvider -Repository PSGallery -Force
+      - Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
+      - Install-Module -Name DockerMsftProvider -Repository PSGallery -Force -Confirm:$false
       - Install-Package -Name docker -ProviderName DockerMsftProvider -Force
       - $REPOSITORY = $env:REPO_URL -replace "/[^/]*$", ""
       - aws ecr get-login-password | powershell -Command "docker login --username AWS --password-stdin $REPOSITORY"
