--- a/application-code/container-queue-proc/templates/buildspec.yml
+++ b/application-code/container-queue-proc/templates/buildspec.yml
@@ -1,11 +1,13 @@
 version: 0.2
-
+env:
+  shell: powershell.exe
+  privileged-mode: true
 phases:
+  install:
+    runtime-versions:
+      python: 3.8.3
   pre_build:
     commands:
-      - Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
-      - Install-Module -Name DockerMsftProvider -Repository PSGallery -Force -Confirm:$false
-      - Install-Package -Name docker -ProviderName DockerMsftProvider -Force
       - $REPOSITORY = $env:REPO_URL -replace "/[^/]*$", ""
       - aws ecr get-login-password | powershell -Command "docker login --username AWS --password-stdin $REPOSITORY"
       - powershell -Command "(Get-Content -path ./application-code/container-queue-proc/src/app.py) -replace '<QUEUE_NAME>', '$QUEUE_NAME' | Set-Content -Path ./application-code/container-queue-proc/src/app.py"
