--- a/application-code/container-queue-proc/templates/buildspec.yml
+++ b/application-code/container-queue-proc/templates/buildspec.yml
@@ -2,6 +2,7 @@ version: 0.2
 env:
   shell: powershell.exe
   privileged-mode: true
+  type: BUILD_GENERAL1_MEDIUM
 phases:
   install:
     runtime-versions:
@@ -9,7 +10,8 @@ phases:
   pre_build:
     commands:
       - $REPOSITORY = $env:REPO_URL -replace "/[^/]*$", ""
-      - aws ecr get-login-password | powershell -Command "docker login --username AWS --password-stdin $REPOSITORY"
+      - $password = aws ecr get-login-password
+      - echo $password | docker login --username AWS --password-stdin $REPOSITORY
       - powershell -Command "(Get-Content -path ./application-code/container-queue-proc/src/app.py) -replace '<QUEUE_NAME>', '$QUEUE_NAME' | Set-Content -Path ./application-code/container-queue-proc/src/app.py"
       - powershell -Command "(Get-Content -path ./application-code/container-queue-proc/src/app.py) -replace '<DESTINATION_BUCKET>', '$DESTINATION_BUCKET' | Set-Content -Path ./application-code/container-queue-proc/src/app.py"
       - $COMMIT_HASH = $env:CODEBUILD_RESOLVED_SOURCE_VERSION.substring(0, 7)
