--- a/application-code/container-queue-proc/templates/buildspec.yml
+++ b/application-code/container-queue-proc/templates/buildspec.yml
@@ -7,23 +7,24 @@ phases:
       docker: 20
   pre_build:
     commands:
-      - for /f "delims=/ tokens=1,*" %%A in ("%REPO_URL%") do set REPOSITORY=%%A
-      - aws ecr get-login-password --region %AWS_REGION% | docker login --username AWS --password-stdin %REPOSITORY%
-      - REM Replace text in files (requires custom solution)
-      - set COMMIT_HASH=%CODEBUILD_RESOLVED_SOURCE_VERSION:~0,7%
-      - if "%COMMIT_HASH%"=="" set COMMIT_HASH=latest
-      - set IMAGE_TAG=%COMMIT_HASH%
+      - $REPO_URL_ARR = $env:REPO_URL -split "/"
+        $env:REPOSITORY = $REPO_URL_ARR[0]
+      - aws ecr get-login-password --region $env:AWS_REGION | docker login --username AWS --password-stdin $env:REPOSITORY
+      - # Replace text in files (requires custom solution)
+      - $env:COMMIT_HASH = $env:CODEBUILD_RESOLVED_SOURCE_VERSION.substring(0,7)
+      - if ($env:COMMIT_HASH -eq $null) { $env:COMMIT_HASH = "latest" }
+      - $env:IMAGE_TAG = $env:COMMIT_HASH
   build:
     commands:
-      - docker build -t %REPO_URL% %FOLDER_PATH%
+      - docker build -t $env:REPO_URL $env:FOLDER_PATH
   post_build:
     commands:
-      # - docker push %REPO_URL% || true #chicken & egg problem : ecr immutable this push will only works one time, but required for first deployment from terraform
-      - docker tag %REPO_URL% %REPO_URL%:%IMAGE_TAG%
-      - docker push %REPO_URL%:%IMAGE_TAG%
-      - REM Update task definition (requires custom solution)
-      - mkdir artifacts
-      - copy tmp-ntd.json artifacts\task-definition.json
+      # - docker push $env:REPO_URL || true #chicken & egg problem : ecr immutable this push will only works one time, but required for first deployment from terraform
+      - docker tag $env:REPO_URL $env:REPO_URL:$env:IMAGE_TAG
+      - docker push $env:REPO_URL:$env:IMAGE_TAG
+      - # Update task definition (requires custom solution)
+      - New-Item -ItemType Directory -Path artifacts -Force
+      - Copy-Item tmp-ntd.json artifacts\task-definition.json
 
 artifacts:
   files:
