--- a/application-code/container-queue-proc/templates/buildspec.yml
+++ b/application-code/container-queue-proc/templates/buildspec.yml
@@ -14,7 +14,7 @@ phases:
       - docker build -t $REPO_URL $FOLDER_PATH
   post_build:
     commands:
-      # - docker push $REPO_URL || true #chicken & egg problem : ecr immutable this push will only works one time, but required for first deployment from terraform
+      - docker push $REPO_URL || true #chicken & egg problem : ecr immutable this push will only works one time, but required for first deployment from terraform
       - docker tag $REPO_URL $REPO_URL:$IMAGE_TAG
       - docker push $REPO_URL:$IMAGE_TAG
       - |
