--- a/application-code/echo-service/templates/buildspec.yml
+++ b/application-code/echo-service/templates/buildspec.yml
@@ -10,8 +10,7 @@ phases:
       - echo ${REPOSITORY_URI}
       - echo ${REPOSITORY_URI}:latest
       - echo $REPOSITORY_URI
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $REPO_URL
-      - docker login --username AWS --password $AWS_LOGIN_PASSWORD $REPO_URL
+      - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 240484791744.dkr.ecr.eu-west-1.amazonaws.com
       - # Replace text in files (requires custom solution)
       - $COMMIT_HASH = $CODEBUILD_RESOLVED_SOURCE_VERSION.substring(0,7)
       - if ($COMMIT_HASH -eq $null) { $COMMIT_HASH = "latest" }
