--- a/application-code/echo-service/templates/buildspec.yml
+++ b/application-code/echo-service/templates/buildspec.yml
@@ -12,9 +12,9 @@ phases:
       - echo $REPOSITORY_URI
       - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 240484791744.dkr.ecr.eu-west-1.amazonaws.com
       - # Replace text in files (requires custom solution)
-      - $COMMIT_HASH = $CODEBUILD_RESOLVED_SOURCE_VERSION.substring(0,7)
-      - if ($COMMIT_HASH -eq $null) { $COMMIT_HASH = "latest" }
-      - $IMAGE_TAG = $COMMIT_HASH
+      - COMMIT_HASH=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
+      - if [ -z "$COMMIT_HASH" ]; then COMMIT_HASH="latest"; fi
+      - IMAGE_TAG=$COMMIT_HASH
   build:
     commands:
       - # Build the main container
