--- a/application-code/echo-service/templates/buildspec.yml
+++ b/application-code/echo-service/templates/buildspec.yml
@@ -15,6 +15,7 @@ phases:
       - COMMIT_HASH=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
       - if [ -z "$COMMIT_HASH" ]; then COMMIT_HASH="latest"; fi
       - IMAGE_TAG=$COMMIT_HASH
+      - cp *.csproj $FOLDER_PATH
   build:
     commands:
       - # Build the main container
