--- a/application-code/echo-service/templates/buildspec.yml
+++ b/application-code/echo-service/templates/buildspec.yml
@@ -28,25 +28,25 @@ phases:
       - echo Updating the Amazon ECS task definition...
       - |
           TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition $TASK_DEFINITION_FAMILY --query '{
-              containerDefinitions: taskDefinition.containerDefinitions,
-              family: taskDefinition.family,
-              taskRoleArn: taskDefinition.taskRoleArn,
-              executionRoleArn: taskDefinition.executionRoleArn,
-              networkMode: taskDefinition.networkMode,
-              volumes: taskDefinition.volumes,
-              placementConstraints: taskDefinition.placementConstraints,
-              requiresCompatibilities: taskDefinition.requiresCompatibilities,
-              cpu: taskDefinition.cpu,
-              memory: taskDefinition.memory
-          }' | tee tmp-td.json)
-      - sed -i "s|IMAGE_TAG|$IMAGE_TAG|g" tmp-td.json
-      - sed -i "s|REPO_URL|$REPO_URL|g" tmp-td.json
-      - aws ecs register-task-definition --cli-input-json file://tmp-td.json
-      - echo Pushing the echo-service Docker image to Amazon ECR...
-      - docker tag $REPO_URL-echo-service $REPO_URL-echo-service:$IMAGE_TAG
-      - docker push $REPO_URL-echo-service:$IMAGE_TAG
-  artifacts:
-    base-directory: echo-service/bin/Debug/net5.0
-    files:
-      - echo-service.dll
-    discard-paths: yes
+                containerDefinitions: taskDefinition.containerDefinitions,
+                family: taskDefinition.family,
+                taskRoleArn: taskDefinition.taskRoleArn,
+                executionRoleArn: taskDefinition.executionRoleArn,
+                networkMode: taskDefinition.networkMode,
+                volumes: taskDefinition.volumes,
+                placementConstraints: taskDefinition.placementConstraints,
+                requiresCompatibilities: taskDefinition.requiresCompatibilities,
+                cpu: taskDefinition.cpu,
+                memory: taskDefinition.memory
+            }'> tmp-td.json)
+      - NEW_TASK_DEFINTION=$(jq -r --arg NEWIMAGE "$REPO_URL:$IMAGE_TAG" '.containerDefinitions[].image |= $NEWIMAGE' tmp-td.json > tmp-ntd.json)
+      # - NEW_REVISION=$(echo $NEW_TASK_INFO | jq '.taskDefinition.revision')
+      - aws ecs register-task-definition --cli-input-json file://tmp-ntd.json
+      - mkdir artifacts
+      - cp tmp-ntd.json artifacts/task-definition.json
+
+artifacts:
+  files:
+    - '**/*'
+  base-directory: 'artifacts'
+  discard-paths: yes
