--- a/application-code/echo-service/templates/buildspec.yml
+++ b/application-code/echo-service/templates/buildspec.yml
@@ -44,7 +44,7 @@ phases:
       - cp tmp-ntd.json artifacts/task-definition.json
       - cp $FOLDER_PATH/templates/imagedefinitions.json artifacts/imagedefinitions.json
       - echo Preparating artifacts
-      - sed -i "s|<CONTAINER_NAME>|$CONTAINER_NAME|g" artifacts/imagedefinitions.json
+      #- sed -i "s|<CONTAINER_NAME>|$CONTAINER_NAME|g" artifacts/imagedefinitions.json
       - sed -i "s|<REPO_URL>|$REPO_URL:$IMAGE_TAG|g" artifacts/imagedefinitions.json
       - cat artifacts/imagedefinitions.json
 artifacts:
