--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,8 @@ on:
 
 env:
   AWS_REGION: eu-west-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: 240484791744.dkr.ecr.eu-west-1.amazonaws.com/ecsdemo-echo-service           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: ecsdemo-echo-service           # set this to your Amazon ECR repository name
+  ECR_REGISTRY: 240484791744.dkr.ecr.eu-west-1.amazonaws.com
   ECS_SERVICE: win-test                 # set this to your Amazon ECS service name
   ECS_CLUSTER: core-infra                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: echo-task-family # set this to the path to your Amazon ECS task definition
@@ -73,6 +74,7 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
+        ls
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
