--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -36,7 +36,7 @@ env:
   ECR_REGISTRY: 240484791744.dkr.ecr.eu-west-1.amazonaws.com
   ECS_SERVICE: win-test                 # set this to your Amazon ECS service name
   ECS_CLUSTER: core-infra                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: echo-task-family # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: echo-task-family           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
