--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -74,7 +74,9 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        ls
+        echo ls
+        echo $ECR_REGISTRY
+        echo $ECR_REPOSITORY
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
