--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,7 +34,7 @@ env:
   AWS_REGION: eu-west-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: ecsdemo-echo-service           # set this to your Amazon ECR repository name
   ECR_REGISTRY: 240484791744.dkr.ecr.eu-west-1.amazonaws.com
-  ECS_SERVICE: win-test                 # set this to your Amazon ECS service name
+  ECS_SERVICE: echo-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: core-infra                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
@@ -77,7 +77,7 @@ jobs:
         echo ls
         echo $ECR_REGISTRY
         echo $ECR_REPOSITORY
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker build -t $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
