--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -78,8 +78,8 @@ jobs:
         echo $ECR_REGISTRY
         echo $ECR_REPOSITORY
         docker build -t $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        docker push $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$IMAGE_TAG
+        echo "image=$env:ECR_REGISTRY/$env:ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
