--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,6 @@ on:
 env:
   AWS_REGION: eu-west-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: ecsdemo-echo-service           # set this to your Amazon ECR repository name
-  ECR_REGISTRY: 240484791744.dkr.ecr.eu-west-1.amazonaws.com
   ECS_SERVICE: echo-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: core-infra                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
@@ -77,9 +76,9 @@ jobs:
         echo ls
         echo $ECR_REGISTRY
         echo $ECR_REPOSITORY
-        docker build -t $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$IMAGE_TAG
-        echo "image=$env:ECR_REGISTRY/$env:ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+        docker build -t $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$env:IMAGE_TAG .
+        docker push $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$env:IMAGE_TAG
+        echo "image=$env:ECR_REGISTRY/$env:ECR_REPOSITORY:$env:IMAGE_TAG" >> $GITHUB_OUTPUT
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
