--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -69,6 +69,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
+      working-directory: ./application-code/echo-service
       run: |
         # Build a docker container and
         # push it to ECR so that it can
