--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -75,9 +75,9 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker build -t $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$env:IMAGE_TAG .
-        docker push $env:ECR_REGISTRY/$env:ECR_REPOSITORY:$env:IMAGE_TAG
-        echo "image=$env:ECR_REGISTRY/$env:ECR_REPOSITORY:$env:IMAGE_TAG" >> $GITHUB_OUTPUT
+        docker build -t $env:ECR_REGISTRY/win-test:$env:IMAGE_TAG .
+        docker push $env:ECR_REGISTRY/win-test:$env:IMAGE_TAG
+        echo "image=$env:ECR_REGISTRY/win-test:$env:IMAGE_TAG" >> $GITHUB_OUTPUT
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
