--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -75,7 +75,7 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker build -t $env:IMAGE_TAG .
+        docker build -t $env:ECR_REGISTRY/win-test:$env:IMAGE_TAG .
         docker push $env:ECR_REGISTRY/win-test:$env:IMAGE_TAG
         echo "image=$env:ECR_REGISTRY/win-test:$env:IMAGE_TAG" >> $GITHUB_OUTPUT
 
