--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,8 +35,6 @@ env:
   ECR_REPOSITORY: win-test           # set this to your Amazon ECR repository name
   ECS_SERVICE: echo-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: core-infra                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
-                                               # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: echo-task-family           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
@@ -83,14 +81,15 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: ${{ env.ECS_TASK_DEFINITION }}
-        container-name: ${{ env.CONTAINER_NAME }}
+        working-directory: ./application-code/echo-service
+        task-definition: task-definition.json
+        container-name: $env:CONTAINER_NAME
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: ${{ steps.cgafrica-new-backend-task.outputs.task-definition }}
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: ${{ env.ECS_SERVICE }}
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: true
