--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -77,19 +77,14 @@ jobs:
         docker push $env:ECR_REGISTRY/win-test:$env:IMAGE_TAG
         echo "image=$env:ECR_REGISTRY/win-test:$env:IMAGE_TAG" >> $GITHUB_OUTPUT
 
-    - name: Fill in the new image ID in the Amazon ECS task definition
-      id: task-def
-      uses: aws-actions/amazon-ecs-render-task-definition@v1
-      with:
-        working-directory: ./application-code/echo-service
-        task-definition: task-definition.json
-        container-name: $env:CONTAINER_NAME
-        image: ${{ steps.build-image.outputs.image }}
+    - name: Download task definition
+      run: |
+        aws ecs describe-task-definition --task-definition echo-task-family --query taskDefinition > task-definition.json
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        task-definition: task-definition.json
         service: ${{ env.ECS_SERVICE }}
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: true
