--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,10 +32,10 @@ on:
 
 env:
   AWS_REGION: eu-west-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: win-test           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: windows-ecsdemo-queue-proc           # set this to your Amazon ECR repository name
   ECS_SERVICE: echo-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: core-infra                 # set this to your Amazon ECS cluster name
-  CONTAINER_NAME: echo-task-family           # set this to the name of the container in the
+  CONTAINER_NAME: windows-ecsdemo-queue-proc           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
@@ -67,24 +67,24 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-        ECR_REPOSITORY: win-test
-      working-directory: ./application-code/echo-service
+        ECR_REPOSITORY: windows-ecsdemo-queue-proc
+      working-directory: ./application-code/queue-processing-windows
       run: |
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
-        docker build -t $env:ECR_REGISTRY/win-test:$env:IMAGE_TAG .
-        docker push $env:ECR_REGISTRY/win-test:$env:IMAGE_TAG
-        echo "image=$env:ECR_REGISTRY/win-test:$env:IMAGE_TAG" >> $GITHUB_OUTPUT
+        docker build -t $env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:IMAGE_TAG .
+        docker push $env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:IMAGE_TAG
+        echo "image=$env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:IMAGE_TAG" >> $GITHUB_OUTPUT
 
     - name: Download task definition
       run: |
-        aws ecs describe-task-definition --task-definition echo-task-family --query taskDefinition > task-definition.json
+        aws ecs describe-task-definition --task-definition windows-simple-iis-2019-core --query taskDefinition > task-definition.json
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: task-definition.json
-        service: ${{ env.ECS_SERVICE }}
+        #service: ${{ env.ECS_SERVICE }}
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: true
