--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -68,7 +68,7 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
         ECR_REPOSITORY: windows-ecsdemo-queue-proc
-      working-directory: ./application-code/queue-processing-windows
+      working-directory: ..\application-code\queue-processing-windows
       run: |
         # Build a docker container and
         # push it to ECR so that it can
