test latest tag

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -66,6 +66,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
+        LATEST_TAG: latest
         ECR_REPOSITORY: windows-ecsdemo-queue-proc
       working-directory: application-code\container-queue-proc-windows
       run: |
@@ -73,7 +74,9 @@ jobs:
         # push it to ECR so that it can
         # be deployed to ECS.
         docker build -t $env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:IMAGE_TAG .
+        docker tag $env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:IMAGE_TAG $env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:LATEST_TAG
         docker push $env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:IMAGE_TAG
+        docker push $env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:LATEST_TAG
         echo "image=$env:ECR_REGISTRY/windows-ecsdemo-queue-proc:$env:IMAGE_TAG" >> $GITHUB_OUTPUT
 
     - name: Download task definition
