--- a/application-code/container-queue-proc-windows/Dockerfile
+++ b/application-code/container-queue-proc-windows/Dockerfile
@@ -1,9 +1,11 @@
+# Use an official Windows-based Python runtime as a parent image
 FROM mcr.microsoft.com/windows/servercore:ltsc2019
 
 # Install Python
 RUN powershell.exe -Command \
         $ErrorActionPreference = 'Stop'; \
         [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12; \
+        New-Item -ItemType Directory -Force -Path C:\temp; \
         wget https://www.python.org/ftp/python/3.9.6/python-3.9.6-amd64.exe -OutFile c:\temp\python-3.9.6-amd64.exe; \
         Start-Process c:\temp\python-3.9.6-amd64.exe -ArgumentList '/quiet InstallAllUsers=1 PrependPath=1' -Wait; \
         Remove-Item -Force -Recurse c:\temp\*
@@ -23,7 +25,7 @@ WORKDIR /app
 COPY ./src /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Run app.py when the container launches
 CMD ["python", "app.py"]
